Added youtube embedded trailers in moviedetails activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="rate">Rate</string>
     <string name="home">Home</string>
     <string name="discover">Discover</string>
+    <string name="play_trailer">Play Trailer</string>
 </resources>
