--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="genre"><u>Genre:</u></string>
     <string name="overview"><u>Overview:</u></string>
     <string name="known_for"><u>Known for</u></string>
+    <string name="cast"><u>Cast</u></string>
 </resources>
