Added "now playing" activity to display movies currently in theaters.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="known_for"><u>Known for</u></string>
     <string name="cast"><u>Cast</u></string>
     <string name="enter_movie_title_to_search">Enter Movie Title to Search</string>
+    <string name="playing">Playing</string>
+    <string name="now_playing">Now Playing</string>
 </resources>
