--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,10 @@
     <string name="enter_year">Enter Year</string>
     <string name="before">Before</string>
     <string name="after">After</string>
-    <string name="search_for_a_movie_by_title">Search for a movie by Title</string>
+    <string name="search_for_a_movie_by_title">Search for a movie</string>
     <string name="discover_a_new_movie">Discover a new Movie</string>
-    <string name="watchlist">Watchlist</string>
-    <string name="ratings">Ratings</string>
+    <string name="watchlist">Your Watchlist</string>
+    <string name="ratings">Your Ratings</string>
     <string name="reset">Reset</string>
     <string name="test">test</string>
     <string name="rate">Rate</string>
