--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,5 @@
     <string name="cast"><u>Cast</u></string>
     <string name="enter_movie_title_to_search">Enter Movie Title to Search</string>
     <string name="playing">Playing</string>
-    <string name="now_playing">Now Playing</string>
+    <string name="now_playing">Now Playing/Upcoming</string>
 </resources>
