--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,33 +7,34 @@
     <string name="enter_year">Enter Year</string>
     <string name="before">Before</string>
     <string name="after">After</string>
-    <string name="search_for_a_movie_by_title">Search for a movie</string>
-    <string name="discover_a_new_movie">Discover a new Movie</string>
-    <string name="watchlist">Your Watchlist</string>
-    <string name="ratings">Your Ratings</string>
+    <string name="search_for_a_movie_by_title">Search</string>
+    <string name="discover_a_new_movie">Discover</string>
+    <string name="watchlist">Watchlist</string>
+    <string name="ratings">Ratings</string>
     <string name="reset">Reset</string>
     <string name="test">test</string>
     <string name="rate">Rate</string>
     <string name="home">Home</string>
     <string name="discover">Discover</string>
     <string name="play_trailer">Play Trailer</string>
-    <string name="similar_movies"><u>Similar movies</u></string>
+    <string name="similar_movies">Similar movies</string>
     <string name="movie_info"><u>Movie Info</u></string>
     <string name="name"><u>Name:</u></string>
     <string name="birth"><u>Birth:</u></string>
     <string name="death"><u>Death:</u></string>
     <string name="birthplace"><u>Birthplace:</u></string>
-    <string name="bio"><u>Bio:</u></string>
+    <string name="bio"><u>Bio</u></string>
     <string name="tagline"><u>Tagline:</u></string>
     <string name="runtime"><u>Runtime:</u></string>
     <string name="budget"><u>Budget:</u></string>
     <string name="revenue"><u>Revenue:</u></string>
     <string name="release_date"><u>Release Date:</u></string>
     <string name="genre"><u>Genre:</u></string>
-    <string name="overview"><u>Overview:</u></string>
+    <string name="overview">Overview</string>
     <string name="known_for"><u>Known for</u></string>
-    <string name="cast"><u>Cast</u></string>
+    <string name="cast">Cast</string>
     <string name="enter_movie_title_to_search">Enter Movie Title to Search</string>
     <string name="playing">Playing</string>
-    <string name="now_playing">Now Playing/Upcoming</string>
+    <string name="now_playing">Now Playing</string>
+    <string name="trending">Trending</string>
 </resources>
