--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,12 +18,12 @@
     <string name="discover">Discover</string>
     <string name="play_trailer">Play Trailer</string>
     <string name="similar_movies">Similar movies</string>
-    <string name="movie_info"><u>Movie Info</u></string>
+    <string name="movie_info">Movie Info</string>
     <string name="name"><u>Name:</u></string>
     <string name="birth"><u>Birth:</u></string>
     <string name="death"><u>Death:</u></string>
     <string name="birthplace"><u>Birthplace:</u></string>
-    <string name="bio"><u>Bio</u></string>
+    <string name="bio">Bio</string>
     <string name="tagline"><u>Tagline:</u></string>
     <string name="runtime"><u>Runtime:</u></string>
     <string name="budget"><u>Budget:</u></string>
@@ -31,7 +31,7 @@
     <string name="release_date"><u>Release Date:</u></string>
     <string name="genre"><u>Genre:</u></string>
     <string name="overview">Overview</string>
-    <string name="known_for"><u>Known for</u></string>
+    <string name="known_for">Known for</string>
     <string name="cast">Cast</string>
     <string name="enter_movie_title_to_search">Enter Movie Title to Search</string>
     <string name="playing">Playing</string>
