Added Tv shows for search results, created TV show activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,13 @@
     <string name="upcoming_movies">Upcoming Movies</string>
     <string name="view">View</string>
     <string name="add">Add</string>
+    <string name="movies">Movies</string>
+    <string name="tv_shows">TV Shows</string>
+    <string name="similar_shows">Similar Shows</string>
+    <string name="show_info">Show Info</string>
+    <string name="created_by">Created by:</string>
+    <string name="first_aired">First Aired:</string>
+    <string name="last_aired">Last Aired:</string>
+    <string name="number_of_episodes">Number of Episodes:</string>
+    <string name="num_seasons">Number of Seasons:</string>
 </resources>
