--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="last_aired">Last Aired:</string>
     <string name="number_of_episodes">Number of Episodes:</string>
     <string name="num_seasons">Number of Seasons:</string>
+    <string name="show_ratings">Show Ratings</string>
+    <string name="movie_ratings">Movie Ratings</string>
 </resources>
